infra/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "kiali.example.com"
  gateways:
    - http-gateway
    - https-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "prometheus.example.com"
  gateways:
    - http-gateway
    - https-gateway
  http:
    - route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "grafana.example.com"
  gateways:
    - http-gateway
    - https-gateway
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "jaeger.example.com"
  gateways:
    - http-gateway
    - https-gateway
  http:
    - route:
        - destination:
            host: jaeger.istio-system.svc.cluster.local
            port:
              number: 16686
